--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
          <div class="btn btn-orange equal">=</div>
       </div>
    </div>
-   <script src="/main.js"></script>
+   <script src="/script.js"></script>
 </body>
 </html>
